--- a/resources/views/assets/sass/_editor.scss
+++ b/resources/views/assets/sass/_editor.scss
@@ -1,47 +1,53 @@
 .rich-text-editor {
+  min-height: 200px;
+
+  & .menu {
+    margin-bottom: 5px;
+
+    & button {
+      width: 25px;
+      height: 25px;
+      line-height: 0;
+      text-align: center;
+      background: #ededed;
+      border-radius: 5px;
+      flex-shrink: 0;
+      padding: 2px;
+
+      &:hover:not([disabled]) {
+        background: #8b8b8b;
+      }
+
+      &.is-active:not([disabled]) {
+        background: #111;
+        color: white;
+      }
+    }
+  }
+
+  & .ProseMirror {
     min-height: 200px;
-    .menu {
-        margin-bottom: 5px;
-        & button {
-            width: 25px;
-            height: 25px;
-            line-height: 0;
-            text-align: center;
-            background: #ededed;
-            border-radius: 5px;
-            flex-shrink: 0;
-            padding: 2px;
-            &:hover:not([disabled]) {
-                background: #8b8b8b;
-            }
-            &.is-active:not([disabled]) {
-                background: #111111;
-                color:white;
-            }
-        }
-    }
+    padding: 1rem;
+  }
 
-    .ProseMirror,
-    .ProseMirror-focused,
-    .ProseMirror:focus {
-        outline: none;
-        & ul, ol {
-            list-style: disc;
-            padding-left: 30px;
-            margin: 10px 0px;
-        }
-    }
+  & .ProseMirror,
+  & .ProseMirror-focused,
+  & .ProseMirror:focus {
+    outline: none;
 
-    .tiptap-vuetify-editor__content {
-        min-height: 220px;
+    & ul,
+    ol {
+      list-style: disc;
+      padding-left: 30px;
+      margin: 10px 0;
     }
+  }
 
-    .ProseMirror {
-        min-height: 200px;
-        padding: 1rem;
-    }
+  & .tiptap-vuetify-editor__content {
+    min-height: 220px;
+  }
 
-    .divider {
-        border: 1px solid #e6e6e6;
-    }
+  & .divider {
+    border: 1px solid #e6e6e6;
+  }
 }
