--- a/resources/views/assets/sass/_fonts.scss
+++ b/resources/views/assets/sass/_fonts.scss
@@ -1,49 +1,53 @@
 @font-face {
-  font-family: 'Ubuntu';
-  src: url('/fonts/ubuntu.regular.woff2') format('woff2'),
-       url('/fonts/ubuntu.regular.woff') format('woff');
+  font-family: Ubuntu;
+  src:
+    url("/fonts/ubuntu.regular.woff2") format("woff2"),
+    url("/fonts/ubuntu.regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Ubuntu';
-  src: url('/fonts/ubuntu.bold.woff2') format('woff2'),
-       url('/fonts/ubuntu.bold.woff') format('woff');
+  font-family: Ubuntu;
+  src:
+    url("/fonts/ubuntu.bold.woff2") format("woff2"),
+    url("/fonts/ubuntu.bold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
-
 }
 
 @font-face {
-  font-family: 'Ubuntu';
-  src: url('/fonts/ubuntu.bold-italic.woff2') format('woff2'),
-       url('/fonts/ubuntu.bold-italic.woff') format('woff');
+  font-family: Ubuntu;
+  src:
+    url("/fonts/ubuntu.bold-italic.woff2") format("woff2"),
+    url("/fonts/ubuntu.bold-italic.woff") format("woff");
   font-weight: 600;
   font-style: italic;
-
 }
 
 @font-face {
-  font-family: 'Ubuntu';
-  src: url('/fonts/ubuntu.italic.woff2') format('woff2'),
-       url('/fonts/ubuntu.italic.woff') format('woff');
+  font-family: Ubuntu;
+  src:
+    url("/fonts/ubuntu.italic.woff2") format("woff2"),
+    url("/fonts/ubuntu.italic.woff") format("woff");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'Ubuntu';
-  src: url('/fonts/ubuntu.medium.woff2') format('woff2'),
-       url('/fonts/ubuntu.medium.woff') format('woff');
+  font-family: Ubuntu;
+  src:
+    url("/fonts/ubuntu.medium.woff2") format("woff2"),
+    url("/fonts/ubuntu.medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Ubuntu';
-  src: url('/fonts/ubuntu.medium-italic.woff2') format('woff2'),
-       url('/fonts/ubuntu.medium-italic.woff') format('woff');
+  font-family: Ubuntu;
+  src:
+    url("/fonts/ubuntu.medium-italic.woff2") format("woff2"),
+    url("/fonts/ubuntu.medium-italic.woff") format("woff");
   font-weight: 500;
   font-style: italic;
 }
