ForgotPassword to Vue

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -30,8 +30,8 @@
   --wkid-message-error-dark: var(--wkid-red-dark);
   --wkid-message-info-light: var(--wkid-blue-light);
   --wkid-message-warning-light: #ffc38b;
-  --wkid-message-success-light: #97ee82;
-  --wkid-message-error-light: var(--wkid-red-light);
+  --wkid-message-success-light: #e0fbd9;
+  --wkid-message-error-light: #ec9082;
 }
 
 // Tailwind CSS
