Fixed password confirmation

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -31,7 +31,7 @@
   --wkid-message-info-light: var(--wkid-blue-light);
   --wkid-message-warning-light: #ffc38b;
   --wkid-message-success-light: #e0fbd9;
-  --wkid-message-error-light: #ec9082;
+  --wkid-message-error-light: #ffc5bd;
 }
 
 // Tailwind CSS
