Added Publish button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,9 +33,14 @@ div.custom-loader {
   }
 }
 .btn.approve,
-.btn.view {
+.btn.view,
+.btn.publish {
   margin-left: 5px;
   cursor: pointer;
+}
+
+.btn.publish {
+  background: #e626bf;
 }
 
 .no-profile-img {
