Fixed action buttons wrapping vertically in browse views

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -86,3 +86,6 @@ div.custom-loader {
 table.dataTable tbody tr.pending {
   background-color: #cefdb9;
 }
+table.dataTable th.actions {
+  min-width: 135px;
+}
