Small color change

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -29,7 +29,7 @@
   --wkid-message-success-dark: #237210;
   --wkid-message-error-dark: var(--wkid-red-dark);
   --wkid-message-info-light: var(--wkid-blue-light);
-  --wkid-message-warning-light: #ffc38b;
+  --wkid-message-warning-light: #ffd5ae;
   --wkid-message-success-light: #e0fbd9;
   --wkid-message-error-light: #ffc5bd;
 }
