--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -99,10 +99,10 @@
       @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border border-transparent rounded-md bg-blue-600 hover:bg-blue-500 focus:outline-none active:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed;
     }
     &.secondary {
-      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-blue-600 transition duration-150 ease-in-out border border-transparent rounded-md border-blue-600 hover:bg-blue-200;
+      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-blue-600 transition duration-150 ease-in-out border rounded-md border-blue-600 hover:bg-blue-200;
     }
     &.secondary-white {
-      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border border-transparent rounded-md border-white hover:bg-white hover:bg-opacity-30;
+      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border rounded-md border-white hover:bg-white hover:bg-opacity-30;
     }
     &.gray {
       @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-gray-600 transition duration-150 ease-in-out border border-transparent rounded-md bg-gray-200 hover:bg-gray-300;
