Formfield link is now links[]

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -195,7 +195,7 @@ h6 {
   }
 }
 
-input[name=link]{
+.has-element-right input{
   float: left;
 	width:calc(100% - 3em);
 }
@@ -205,6 +205,16 @@ button.plus-btn{
   font-size: 3em;
   line-height: 0.75em;
   padding: 0 0.2em;
+}
+
+.plus-btn span{
+  background-color: var(--wkid-pink);
+  color: white;
+  font-size: 0.35em;
+  border-radius: 0.75em;
+  width: 1.5em;
+  line-height: 1.5;
+  top:1em;
 }
 
 svg {
