--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -258,4 +258,14 @@ div.custom-loader {
   width: 20px;
   height: 20px;
   animation: spin 1s linear infinite;
+
+  &.dark {
+    border: 4px solid #333;
+    border-top: 4px solid transparent;
+  }
+
+  &.large {
+    width: 40px;
+    height: 40px;
+  }
 }
