--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -51,6 +51,16 @@
     @apply text-2xl;
   }
 
+  .prose {
+    & h1, h2, h3 {
+      @apply mb-4;
+    }
+
+    & p {
+      @apply mb-2;
+    }
+  }
+
   [type="text"],
   [type="email"],
   [type="url"],
