Updated font to Outfit

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -137,7 +137,7 @@
 
 html {
   font-family:
-    Ubuntu,
+    Outfit,
     ui-sans-serif,
     system-ui,
     -apple-system,
@@ -156,7 +156,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Ubuntu, ui-sans-serif, system-ui, sans-serif;
   font-weight: 600;
 }
 
