--- a/resources/views/assets/sass/_fonts.scss
+++ b/resources/views/assets/sass/_fonts.scss
@@ -1,53 +1,62 @@
 @font-face {
-  font-family: Ubuntu;
-  src:
-    url("~fonts/ubuntu.regular.woff2") format("woff2"),
-    url("~fonts/ubuntu.regular.woff") format("woff");
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: Ubuntu;
-  src:
-    url("~fonts/ubuntu.bold.woff2") format("woff2"),
-    url("~fonts/ubuntu.bold.woff") format("woff");
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Ubuntu;
-  src:
-    url("~fonts/ubuntu.bold-italic.woff2") format("woff2"),
-    url("~fonts/ubuntu.bold-italic.woff") format("woff");
-  font-weight: 600;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: Ubuntu;
-  src:
-    url("~fonts/ubuntu.italic.woff2") format("woff2"),
-    url("~fonts/ubuntu.italic.woff") format("woff");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: Ubuntu;
-  src:
-    url("~fonts/ubuntu.medium.woff2") format("woff2"),
-    url("~fonts/ubuntu.medium.woff") format("woff");
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: Ubuntu;
-  src:
-    url("~fonts/ubuntu.medium-italic.woff2") format("woff2"),
-    url("~fonts/ubuntu.medium-italic.woff") format("woff");
-  font-weight: 500;
-  font-style: italic;
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-ExtraBold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url("~fonts/Outfit-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
 }
