Revert list-style in tailwind base

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -124,6 +124,13 @@
       @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border border-transparent rounded-md bg-[color:var(--wkid-pink)] hover:bg-[color:var(--wkid-pink-dark)] disabled:bg-gray-400 disabled:cursor-not-allowed;
     }
   }
+
+  // Revert list-style (which Tailwind removes by default)
+  ol,
+  ul {
+    list-style: revert;
+    padding-left: 1.5rem;
+  }
 }
 
 @tailwind components;
