--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -224,6 +224,13 @@ svg {
   }
 }
 
+#actiewijzer-banner {
+  position: relative;
+  background: var(--wkid-pink);  
+  background: linear-gradient(to top left, var(--wkid-pink), #91368b);  
+  width: 100%;
+}
+
 span[role="alert"] {
   display: block;
   margin-top: 0.25rem;
