Reduced banner brightness

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -228,6 +228,7 @@ svg {
   position: relative;
   background: var(--wkid-pink);  
   background: linear-gradient(to top left, var(--wkid-pink), #91368b);  
+  opacity: 90%;
   width: 100%;
 }
 
