--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -137,6 +137,7 @@
 
 html {
   font-family:
+    Ubuntu,
     Outfit,
     ui-sans-serif,
     system-ui,
@@ -156,6 +157,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: Ubuntu, Outfit, ui-sans-serif, system-ui, sans-serif;
   font-weight: 600;
 }
 
