Improved home styling

--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -5,9 +5,11 @@
 :root {
   --wkid-red: #e11d00;
   --wkid-pink: #f30060;
+  --wkid-pink-90: #f30060e6;
   --wkid-purple: #d810b1;
   --wkid-indigo: #805def;
   --wkid-blue: #0081ff;
+  --wkid-blue-90: #0081ffe6;
   --wkid-yellow: #fdd10d;
   --wkid-red-dark: #aa1700;
   --wkid-pink-dark: #ad0246;
