--- a/resources/views/assets/sass/_fonts.scss
+++ b/resources/views/assets/sass/_fonts.scss
@@ -1,61 +1,61 @@
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Outfit';
+  font-family: Outfit;
   src: url("~fonts/Outfit-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
