--- a/resources/views/assets/sass/app.scss
+++ b/resources/views/assets/sass/app.scss
@@ -3,39 +3,38 @@
 @use "fonts";
 @use "editor";
 
+/* stylelint-disable-next-line */
 @custom-variant dark (&:where(.app-dark, .app-dark *));
+
+:root{
+  // WKID blue
+  --color-blue-50: #f2f5ff;
+  --color-blue-100: #e4ebff;
+  --color-blue-200: #c6dcff;
+  --color-blue-300: #a1c3ff;
+  --color-blue-400: #729fff;
+  --color-blue-500: #006eff;
+  --color-blue-600: #0073e4;
+  --color-blue-700: #0063c6;
+  --color-blue-800: #0050a1;
+  --color-blue-900: #003772;
+}
 
 :root {
   --wkid-red: #e11d00;
   --wkid-pink: #f30060;
   --wkid-pink-90: #f30060e6;
-  --wkid-purple: #d810b1;
-  --wkid-indigo: #805def;
-  --wkid-blue: #0081ff;
-  --wkid-blue-90: #0081ffe6;
   --wkid-yellow: #fdd10d;
   --wkid-red-dark: #aa1700;
   --wkid-pink-dark: #ad0246;
-  --wkid-purple-dark: #9c1c83;
-  --wkid-indigo-dark: #5b3cc2;
-  --wkid-blue-dark: #0f5ead;
   --wkid-yellow-dark: #c9a400;
   --wkid-red-light: #e66956;
   --wkid-pink-light: #f34e90;
-  --wkid-purple-light: #d354ba;
-  --wkid-indigo-light: #9986d6;
-  --wkid-blue-light: #4fa7ff;
   --wkid-yellow-light: #ffdf50;
-  --wkid-message-info: var(--wkid-blue);
-  --wkid-message-warning: #ff8b1f;
   --wkid-message-success: #45da20;
   --wkid-message-error: var(--wkid-red);
-  --wkid-message-info-dark: var(--wkid-blue-dark);
-  --wkid-message-warning-dark: #ce6503;
   --wkid-message-success-dark: #237210;
   --wkid-message-error-dark: var(--wkid-red-dark);
-  --wkid-message-info-light: var(--wkid-blue-light);
-  --wkid-message-warning-light: #ffd5ae;
   --wkid-message-success-light: #e0fbd9;
   --wkid-message-error-light: #ffc5bd;
 }
@@ -54,7 +53,9 @@
   }
 
   .prose {
-    & h1, h2, h3 {
+    & h1,
+    h2,
+    h3 {
       @apply mb-5;
     }
 
@@ -86,12 +87,14 @@
   }
 
   [type="checkbox"] {
-    @apply text-[color:var(--wkid-blue)] border-gray-300 rounded-xl shadow-sm
-      focus:border-[color:var(--wkid-blue)] focus:ring focus:ring-offset-0
+    @apply text-primary border-gray-300 rounded-xl shadow-sm
+      focus:border-primary focus:ring focus:ring-offset-0
       focus:ring-blue-600/50;
   }
 
-  [v-cloak] {display: none;}
+  [v-cloak] {
+    display: none;
+  }
 
   p,
   label,
@@ -103,27 +106,34 @@
   h5,
   h6 {
     & a {
-      @apply font-medium transition duration-150 ease-in-out text-[color:var(--wkid-blue)] focus:outline-none hover:underline hover:text-[color:var(--wkid-blue-dark)]
+      @apply font-medium transition duration-150 ease-in-out text-primary focus:outline-none hover:underline hover:text-blue-700;
     }
   }
+
   a.link {
-    @apply font-medium transition duration-150 ease-in-out text-blue-600 hover:text-blue-500 focus:outline-none focus:underline;
+    @apply font-medium transition duration-150 ease-in-out text-primary-600 hover:text-primary focus:outline-none focus:underline;
   }
-  button, a {
+
+  button,
+  a {
     &.primary {
       @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border border-transparent rounded-md bg-blue-600 hover:bg-blue-500 active:bg-blue-700 disabled:bg-gray-400 disabled:cursor-not-allowed;
     }
+
     &.secondary {
-      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-blue-600 transition duration-150 ease-in-out border rounded-md border-blue-600 hover:bg-blue-200;
+      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-primary-600 transition duration-150 ease-in-out border rounded-md border-blue-600 hover:bg-blue-200;
     }
+
     &.secondary-white {
       @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border rounded-md border-white hover:bg-white/30;
     }
+
     &.gray {
       @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-gray-600 transition duration-150 ease-in-out border border-transparent rounded-md bg-gray-200 hover:bg-gray-300;
     }
+
     &.pink {
-      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border border-transparent rounded-md bg-[color:var(--wkid-pink)] hover:bg-[color:var(--wkid-pink-dark)] disabled:bg-gray-400 disabled:cursor-not-allowed;
+      @apply flex justify-center px-4 py-2 text-sm font-medium cursor-pointer text-white transition duration-150 ease-in-out border border-transparent rounded-md bg-(--wkid-pink) hover:bg-[color:var(--wkid-pink-dark)] disabled:bg-gray-400 disabled:cursor-not-allowed;
     }
   }
 }
@@ -161,9 +171,10 @@ h6 {
 }
 
 .html-output {
-  & ol, ul {
+  & ol,
+  ul {
     padding-left: 40px;
-    list-style: revert
+    list-style: revert;
   }
 
   & p {
@@ -174,7 +185,8 @@ h6 {
 .gradient-border-b,
 #header.detatched {
   padding-bottom: 2px;
-  background: linear-gradient(to right, var(--wkid-pink), var(--wkid-blue)) left bottom #fff no-repeat;
+  background: linear-gradient(to right, var(--wkid-pink), var(--color-primary)) left
+    bottom #fff no-repeat;
   background-size: 100% 2px;
 }
 
@@ -213,22 +225,24 @@ h6 {
 }
 
 .alert-success {
-  color: var(--wkid-message-success-dark);
-  background: var(--wkid-message-success-light);
+  color: var(--color-green-800);
+  background: var(--color-green-100);
 }
+
 .alert-warning {
-  color: var(--wkid-message-warning-dark);
-  background: var(--wkid-message-warning-light);
+  color: var(--color-yellow-800);
+  background: var(--color-yellow-100);
+
   & a {
-    @apply font-medium transition duration-150 text-[color:var(--wkid-message-warning-dark)] underline ease-in-out focus:outline-none focus:underline;
+    @apply font-medium transition duration-150 underline ease-in-out focus:outline-none focus:underline;
   }
 }
 
 #actiewijzer-banner {
   position: relative;
-  background: var(--wkid-pink);  
-  background: linear-gradient(to top left, var(--wkid-pink), #91368b);  
-  opacity: 90%;
+  background: var(--wkid-pink);
+  background: linear-gradient(to top left, var(--wkid-pink), #91368b);
+  opacity: 0.9;
   width: 100%;
 }
 
@@ -263,9 +277,10 @@ span[role="alert"] {
 }
 
 @keyframes wave {
-  to { transform: translateX(-100%); }
+  to {
+    transform: translateX(-100%);
+  }
 }
-
 
 /****** Form Input CLASSES **********/
 
